edit on loan dto
